tests/chainsaw-uninstall/_fixtures/ingress-a.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uninstall-test-ingress-a
  namespace: namespace-a
  annotations:
    ngrok.com/mapping-strategy: "endpoints-verbose"
spec:
  ingressClassName: ngrok-a
  rules:
    - host: uninstall-test-ingress-a.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uninstall-test-svc
                port:
                  number: 80
