tests/chainsaw-uninstall/multi-ns-retain-policy/values-operator-a.yaml
# Scenario: multi-ns-retain-policy - Operator A
# Namespace-scoped operator watching namespace-a only

features:
  drainPolicy: Retain
  ingress:
    controllerName: k8s.ngrok.com/ingress-controller-a
    ingressClass:
      name: ngrok-a
    watchNamespace: namespace-a
installCRDs: false
