tests/chainsaw-uninstall/multi-ns-retain-policy/values-operator-b.yaml
# Scenario: multi-ns-retain-policy - Operator B
# Namespace-scoped operator watching namespace-b only

features:
  drainPolicy: Retain
  ingress:
    controllerName: k8s.ngrok.com/ingress-controller-b
    ingressClass:
      name: ngrok-b
    watchNamespace: namespace-b
installCRDs: false
